tests/ui/invalid_example.rs
#![allow(unused_imports)]
use aide::axum::IntoApiResponse;
use axum::response::Json;
use rovo::rovo;

/// Test handler with invalid example
///
/// @response 200 Json<String> Success
/// @example 200 This is not valid Rust code!!!
#[rovo]
async fn test_handler() -> impl IntoApiResponse {
    Json("test".to_string())
}

fn main() {}
